<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".views.account.AccountSignUpFragment">

    <TextView
        android:id="@+id/username"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_label" />

    <TextView
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_label"
        android:textColor="@color/blue_400" />

    <EditText
        android:id="@+id/edit_signup_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress" />

    <TextView
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_label"
        android:textColor="@color/blue_400" />

    <EditText
        android:id="@+id/edit_singup_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edit_sig_up_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="10dp"
        android:background="@color/blue_400"
        android:text="@string/sign_up_label" />

    <TextView
        android:id="@+id/to_log_in_link"
        style="@style/TextAppearance.Material3.BodyLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="or login"
        android:textColor="@color/blue_200" />

</LinearLayout>