<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".views.account.AccountLogInFragment">

    <TextView
        android:id="@+id/username"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_label" />

    <TextView
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_label"
        android:textColor="@color/blue_400" />

    <EditText
        android:id="@+id/edit_login_email"
        android:layout_width="match_parent"
        android:inputType="textEmailAddress"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint" />

    <TextView
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_label"
        android:textColor="@color/blue_400" />

    <EditText
        android:id="@+id/edit_login_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="10dp"
        android:background="@color/blue_400"
        android:text="@string/login_label" />

    <TextView
        style="@style/TextAppearance.Material3.BodyLarge"
        android:id="@+id/to_signup_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="or sign up"
        android:padding="10dp"
        android:textColor="@color/blue_200" />


</LinearLayout>