<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:gravity="center_horizontal"
android:orientation="vertical"
tools:context=".views.account.EditUserPasswordFragment">


<TextView
    android:id="@+id/username"
    style="@style/TextAppearance.MaterialComponents.Headline5"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/edit_account_label" />


<TextView
    style="@style/TextAppearance.MaterialComponents.Headline6"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="Current password"
    android:textColor="@color/blue_400" />

<EditText
    android:id="@+id/edit_curr_password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/password_hint"
    android:inputType="textPassword" />

<TextView
    style="@style/TextAppearance.MaterialComponents.Headline6"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="New password"
    android:textColor="@color/blue_400" />

<EditText
    android:id="@+id/edit_new_password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/password_hint"
    android:inputType="textPassword" />

<EditText
    android:id="@+id/edit_confirm_password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/confirm_password_hint"
    android:inputType="textPassword" />


<Button
    android:id="@+id/save_changes"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="30dp"
    android:layout_marginVertical="10dp"
    android:text="@string/save_edit_account" />

<ProgressBar
    android:id="@+id/progress_bar"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="invisible" />
</LinearLayout>