<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="40dp"
    tools:context=".views.account.EditAccountFragment">


    <Button
        android:id="@+id/to_edit_profile_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile_label" />

    <Button
        android:id="@+id/to_edit_email_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_email_label" />

    <Button
        android:id="@+id/to_edit_password_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_password_label" />
    <!--    <TextView-->
    <!--        android:id="@+id/username"-->
    <!--        style="@style/TextAppearance.MaterialComponents.Headline5"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/edit_account_label" />-->
    <!--    -->



    <!--    <TextView-->
    <!--        style="@style/TextAppearance.MaterialComponents.Headline6"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/phone_number_label"-->
    <!--        android:textColor="@color/blue_400" />-->

    <!--    <EditText-->
    <!--        android:id="@+id/edit_phone_number"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:hint="@string/phone_number_hint"-->
    <!--        android:inputType="phone" />-->

    <!--    <TextView-->
    <!--        style="@style/TextAppearance.MaterialComponents.Headline6"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/password_label"-->
    <!--        android:textColor="@color/blue_400" />-->

    <!--    <EditText-->
    <!--        android:id="@+id/edit_singup_password"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:hint="@string/password_hint"-->
    <!--        android:inputType="textPassword" />-->

    <!--    <EditText-->
    <!--        android:id="@+id/edit_sig_up_confirm_password"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:hint="@string/confirm_password_hint"-->
    <!--        android:inputType="textPassword" />-->

    <!--    <Button-->
    <!--        android:id="@+id/save_account_changes_btn"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginHorizontal="30dp"-->
    <!--        android:layout_marginVertical="10dp"-->
    <!--        android:text="@string/save_edit_account" />-->
</LinearLayout>